--- a/index.html
+++ b/index.html
@@ -54,8 +54,16 @@
       </nav>
     </header>
 
-
-
+   <footer class="text-center py-4 mt-5 bg-body-tertiary border-top">
+      <div class="container small">
+        <p class="mb-1">
+         <i class="bi bi-award-fill"></i> TP5 DOM — Ejercicio 1: Números Mágicos
+        </p>
+        <p class="text-muted mb-0">
+          Hecho por Basilio Martinez · Bootswatch Quartz · Bootstrap 5
+        </p>
+      </div>
+    </footer>
 
        <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
