--- a/index.html
+++ b/index.html
@@ -53,6 +53,59 @@
         </div>
       </nav>
     </header>
+    <main class="container py-4">
+      <!-- Hero -->
+      <section class="text-center mb-4" id="como-jugar">
+        <h1 class="display-6">🎲 Juego: Números Mágicos</h1>
+        <p class="text-muted mb-3">
+          Adiviná el número secreto entre <b>1 y 100</b>. Presioná
+          <b>Comenzar</b> y empezá a probar suerte. Te diremos si tu intento es
+          <em>mayor</em> o <em>menor</em> que el número mágico.
+        </p>
+        <button id="btn-start" class="btn btn-primary btn-lg">
+          <i class="bi bi-lightning-charge-fill me-1"></i> Comenzar
+        </button>
+      </section>
+
+      <!-- Card del juego -->
+      <section class="row justify-content-center" id="juego">
+        <div class="col-md-6 col-lg-5">
+          <div class="card border-0 shadow-sm">
+            <div class="card-body">
+              <h2 class="h5 mb-3">
+                <i class="bi bi-magic me-2"></i>Probá un número
+              </h2>
+
+              <form id="form-intento" class="row g-2" autocomplete="off">
+                <div class="col-8">
+                  <label for="input-numero" class="form-label visually-hidden">Número (1–100)</label>
+                  <input
+                    id="input-numero"
+                    type="number"
+                    class="form-control"
+                    placeholder="Número (1–100)"
+                    min="1"
+                    max="100"
+                    required
+                    disabled
+                  />
+                </div>
+                <div class="col-4 d-grid">
+                  <button id="btn-enviar" class="btn btn-success" type="submit" disabled>
+                    <i class="bi bi-send-fill me-1"></i> Enviar
+                  </button>
+                </div>
+              </form>
+
+              <div class="text-center">
+                <span id="msg-intentos" class="badge bg-secondary mt-3">Intentos: 0</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
 
    <footer class="text-center py-4 mt-5 bg-body-tertiary border-top">
       <div class="container small">
@@ -70,6 +123,6 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    <script src=""></script>
+    <script src="./js/Ejercicio1.js"></script>
 </body>
 </html>
